--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,6 +1,10 @@
 header {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid pink;
+
+  padding: 0.5rem 1.5rem;
+  background-color: transparent;
+  border-bottom: 1px solid #e5e7eb;
 }
