--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,3 +1,7 @@
 .hero {
     border: 1px solid gold;
+    padding: clamp(4rem, 8vw, 8rem) 1.5rem;
+    background-image: url("../assets/hero.jpg");
+    background-position: center;
+    background-size: cover;
 }
