--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -1,19 +1,20 @@
 .nav {
   display: flex;
-  gap: 0.75rem;
+  gap: 1.25rem;
   align-items: center;
 }
 
 .navLink {
-  padding: 0.5rem 0.9rem;
-  border-radius: 6px;
+  padding: 0.25rem 0.5rem;
+  /* border-radius: 6px; */
 
   text-decoration: none;
-  font-size: 0.95rem;
+  font-size: 0.9rem;
   font-weight: 500;
+  letter-spacing: 0.02em;
 
-  background-color: #f3f4f6;
-  color: #111827;
+  /* background-color: #f3f4f6; */
+  color: var(--text-secondary);
 
   transition:
     background-color 0.15s ease,
@@ -22,7 +23,7 @@
 }
 
 .navLink:hover {
-  background-color: #e5e7eb;
+  color: var(--text-primary);
 }
 
 .navLink:active {
@@ -30,10 +31,5 @@
 }
 
 .activeLink {
-  background-color: #4f46e5;
-  color: #ffffff;
-}
-
-.activeLink:hover {
-  background-color: #4f46e5;
+  color: var(--text-primary);
 }
