--- a/src/components/CartBody.module.css
+++ b/src/components/CartBody.module.css
@@ -9,7 +9,7 @@
 }
 
 .cartMain {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
