set up CartTotal component

--- a/src/components/CartCount.module.css
+++ b/src/components/CartCount.module.css
@@ -2,17 +2,17 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-
   margin-left: 0.5rem;
   width: 16px;
   height: 16px;
 
-  padding: 9px;
+  padding: 10px;
   border-radius: 50%;
 
   font-size: 0.7rem;
   font-weight: 600;
-  
+  line-height: 1;
+
   background-color: var(--accent-neon);
   color: #000;
 }
