--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -13,18 +13,23 @@
 .logo {
   display: flex;
   flex-direction: row;
-  gap: 0.25rem;
+  gap: 0.5rem;
   align-items: center;
 }
 
 .logo img {
   height: 2.5rem;
-  height: 2.5rem;
+  width: 2.5rem;
 }
 
 @media screen and (max-width: 768px) {
   .title {
     font-size: 1.5rem;
+  }
+
+  .logo img {
+    height: 2rem;
+    height: 2rem;
   }
 }
 
