--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -24,17 +24,17 @@
 
 @media screen and (max-width: 768px) {
   .title {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   .logo img {
     height: 2rem;
-    height: 2rem;
+    width: 2rem;
   }
 }
 
 @media screen and (max-width: 350px) {
   .title {
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
 }
